[package]
name = "markdown"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.0"
tree-sitter = "0.20.9"
walkdir = "2.3.2"

[build-dependencies]
cc = "*"
